--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <img class="img_tit" src="img/imgharold.jpg">
         </div>
         <div class="tit_centrado">
-                <h1 class="tit_ppal">HOJA DE VIDA HAROLD GUTIERREZ</h1>
+                <h1 class="tit_ppal">HOJA DE VIDA HAROLD GUTIERREZ ESTO VA MAS TEXTO</h1>
         </div>
 
         <div class="tbl_contenedor"><hr>
